# clipseek

./: .gitignore
backend/: main.py  pyproject.toml
backend/services/: embedding_service.py  vectordb_service.py  video_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: results-grid.tsx  search-bar.tsx  site-header.tsx  status-card.tsx  video-link.tsx  video-player.tsx
